Minor Styling Updates

--- a/thegalaxy-child/css/custom.scss
+++ b/thegalaxy-child/css/custom.scss
@@ -177,6 +177,13 @@ footer {
 	background: $colortwo;
 }
 
+.edit_button {
+	a:link,
+	a:visited {
+		background: $colorone;
+	}
+}
+
 /* responsive media queries */
 
 @media (min-width: 980px) and (max-width: 1220px) {
